# KRUCX_WHATSAPPBOT

./: .env.example  .gitignore  CLAUDE.md  HOWTORUN.md  README.md  app.py  bot_handler.py  chat_cli.py  context.md  conversation_engine.py  kb_retriever.py  lead_profile.py  pyproject.toml
app/: bot_handler.py  conversation_engine.py  database.py  kb_retriever.py  main.py
data/: knowledge_base.json
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
scripts/: chat_cli.py
